Blog page post image center alignment issue fix

--- a/style.less
+++ b/style.less
@@ -361,7 +361,11 @@ body.category {
 		padding: 40px 0;
 		border-bottom: 1px solid #e5e5e5;
 		text-align: center;
-
+		
+		.image-inner {
+			text-align: center;
+			> img {display: inline-block;}
+		}
 		.entry-title {
 			color: #444;
 			font-size: 30px;
